# skillPrism

./: .pre-commit-config.yaml  BEGINNER_HANDBOOK.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  coverage.json  evaluate_skill_rubric.py  mkdocs.yml  optimize_skill.py  pyproject.toml  skill_rubric_types.yaml
archive/docs/: index.md
docs/: SKILL_SCORECARD.md  index.md
docs/getting-started/: beginner-handbook.md  ci.md  cli-cheatsheet.md  evaluate.md  hands-on.md  improve.md  index.md  install.md  pipeline.md  test.md
docs/guide/: 01-install-and-setup.md  02-evaluate.md  03-quick-verify.md  04-build-benchmark.md  05-run-benchmark.md  06-optimize.md  07-report-and-ci.md  08-production-loop.md
docs/reference/: adding-a-benchmark-task-type.md  agent-command.md  api.md  benchmark-bioinformatics.md  benchmark-guide.md  benchmark-metrics.md  cell2location.md  data-building-decisions.md  dimension-clusters.md  edge-cases.md  experiment-history.md  framework.md  gradual-testing.md  langfuse-integration.md  llm-judge.md  natural-language-interaction.md  operational-playbook.md  optimization-strategy.md  overview.md  roadmap.md  rubric-enhancements.md  runtime-neutrality.md  skill-prism-architecture.md  test-prompts-verification.md  visual-result-cards.md
docs/tutorial/: 01-why-evaluate-skills.md  02-install-and-first-skill.md  03-understanding-the-rubric.md  04-building-your-first-benchmark.md  05-optimization-loop.md  06-quality-pipeline.md  07-extending-skillprism.md  08-gradual-testing-and-real-data.md  agent-langfuse-production-loop.md  (+3 more)
scripts/: generate_llm_judgments.py  langfuse_to_benchmark.py  skill_code_generator.py
site/: 404.html  index.html  objects.inv  sitemap.xml  test-prompts.json
skillprism/: __init__.py  _baseline.py  _git.py  _locking.py  _net_guard.py  code_generator.py  config_schema.py  dependency_checker.py  dimension_clusters.py  editor_strategies.py  evaluate_skill_rubric.py  experiment_history.py  gradual.py  llm_judge.py  markdown_structure.py  optimization_strategy.py  optimize_skill.py  optimizer_guards.py  orchestrator.py  prompts_verification.py  reports.py  rubric_enhancements.py  runtime_neutrality.py  security_evaluator.py  skill_editor.py  skill_lens_checks.py  smoke_test_runner.py  test_prompts.py  test_skill_cli.py  utils.py
templates/: regression_test.py
tests/: benchmark_helpers.py  conftest.py  test_agent_executor.py  test_baseline_atomic.py  test_baseline_helpers.py  test_benchmark_builder.py  test_benchmark_expected_result.py  test_benchmark_metric_diff.py  test_benchmark_output_format.py  test_benchmark_plugins.py  test_benchmark_regression.py  test_benchmark_suites.py  test_boundary.py  test_ci_pipeline.py  test_cli_end_to_end.py  test_config_schema.py  test_dimension_clusters.py  test_dimension_enable_disable.py  test_dimension_sections_config.py  test_editor_strategies.py  test_engine_fixes.py  test_evaluate_prompts_dir.py  test_evaluate_skill_cli.py  test_example_cell2location.py  test_experiment_history.py  test_fixtures.py  test_git_helpers.py  test_gradual.py  test_langfuse_to_benchmark.py  test_llm_judge.py  test_llm_judge_config.py  test_markdown_structure.py  test_metrics.py  test_mock_data.py  test_net_guard.py  test_optimization_strategy.py  test_optimize_bloat_dryrun.py  test_optimize_diff.py  test_optimize_e2e.py  test_optimize_edit_code.py  (+17 more)
(+183 files in other folders)
